; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_ldefault.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_ldefault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto_type = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"Need a sproto_type object\00", align 1
@encode_default = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ldefault to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldefault(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [64 x i8], align 16
  %6 = alloca %struct.sproto_type*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call %struct.sproto_type* @lua_touserdata(i32* %9, i32 1)
  store %struct.sproto_type* %10, %struct.sproto_type** %6, align 8
  %11 = load %struct.sproto_type*, %struct.sproto_type** %6, align 8
  %12 = icmp eq %struct.sproto_type* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @luaL_argerror(i32* %14, i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 %15, i32* %2, align 4
  br label %52

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_newtable(i32* %17)
  %19 = load %struct.sproto_type*, %struct.sproto_type** %6, align 8
  %20 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %21 = load i32, i32* @encode_default, align 4
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @sproto_encode(%struct.sproto_type* %19, i8* %20, i32 64, i32 %21, i32* %22)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %51

26:                                               ; preds = %16
  store i32 128, i32* %7, align 4
  %27 = load i32*, i32** %3, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i8* @lua_newuserdata(i32* %27, i32 %28)
  store i8* %29, i8** %8, align 8
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @lua_insert(i32* %30, i32 -2)
  br label %32

32:                                               ; preds = %42, %26
  %33 = load %struct.sproto_type*, %struct.sproto_type** %6, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* @encode_default, align 4
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @sproto_encode(%struct.sproto_type* %33, i8* %34, i32 %35, i32 %36, i32* %37)
  store i32 %38, i32* %4, align 4
  %39 = load i32, i32* %4, align 4
  %40 = icmp sge i32 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %32
  br label %50

42:                                               ; preds = %32
  %43 = load i32, i32* %7, align 4
  %44 = mul nsw i32 %43, 2
  store i32 %44, i32* %7, align 4
  %45 = load i32*, i32** %3, align 8
  %46 = load i32, i32* %7, align 4
  %47 = call i8* @lua_newuserdata(i32* %45, i32 %46)
  store i8* %47, i8** %8, align 8
  %48 = load i32*, i32** %3, align 8
  %49 = call i32 @lua_replace(i32* %48, i32 -3)
  br label %32

50:                                               ; preds = %41
  br label %51

51:                                               ; preds = %50, %16
  store i32 1, i32* %2, align 4
  br label %52

52:                                               ; preds = %51, %13
  %53 = load i32, i32* %2, align 4
  ret i32 %53
}

declare dso_local %struct.sproto_type* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @sproto_encode(%struct.sproto_type*, i8*, i32, i32, i32*) #1

declare dso_local i8* @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @lua_insert(i32*, i32) #1

declare dso_local i32 @lua_replace(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
